@@ -1058,7 +1058,9 @@ EOF
 	for my $member_name (@members) {
 	    my $member_descr = $member_descrs{$member_name};
 	    
-	    $desc .= "<varlistentry>\n<term><literal>$member_name</literal></term>\n";
+	    $id = &CreateValidSGMLID ($member_name);
+	    $condition = &MakeConditionDescription ($member_name);
+	    $desc .= "<varlistentry>\n<term><anchor id=\"$id\" role=\"constant\"${condition}${empty_element_end}<literal>$member_name</literal></term>\n";
 	    if (defined $member_descr) {
 		$desc .= "<listitem><simpara>".&ExpandAbbreviations($member_descr)."</simpara></listitem>\n";
 	    } else {
@@ -1803,12 +1805,23 @@ sub ExpandAbbreviations {
     $text =~ s/\@(\w+((\.|->)\w+)*)/<parameter>$1<\/parameter>/g;
 
     # Convert '%constant'. Also allow negative numbers, e.g. %-1.
-    $text =~ s/\%(-?\w+)/<literal>$1<\/literal>/g;
+    $text =~ s/\%(-?\w+)/&MakeXRef($1, &tagify($1, "literal"));/eg;
 
     # Convert '#symbol'
-    $text =~ s/#([\w-]+)/&MakeXRef($1, &tagify($1, "type"));/eg;
+    # if $1 is Object::signal change id to Object-signal
+    # if $1 is Object:property change id to Object--property
+    $text =~ s/#([\w\-:]+)/&MakeXRef(&symbolify($1), &tagify($1, "type"));/eg;
 
     return $text;
+}
+
+sub symbolify {
+  my ($symbol) = @_;
+
+  $symbol =~ s/::/-/;
+  $symbol =~ s/:/--/;
+  
+  return $symbol;
 }
 
 sub tagify {
