@@ -1,3 +1,10 @@
+2006-03-19  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-mkdb.in (OutputEnum, ExpandAbbreviations, symbolify): 
+	allow use of 'Object::signal' and 'Object:property' to link to signals
+	and properties, and add links to enum constant values.
+	(#332483, Stefan Kost)
+
 2006-03-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtkdoc-mkdb.in (MakeIndexterms): Create separate indexterms
